# cicd-log-analyzer-ai-assisted-development

./: .gitignore  README.md  pyproject.toml
reports/: report.html  report.json  report.txt
screenshots/: pytest_output.html  report.html  terminal_report.html
src/cicd_log_analyzer/: __init__.py  ai_analyzer.py  analyzer.py  cli.py  report.py  rules.py
tests/: test_ai_analyzer.py  test_analyzer.py  test_cli_ai.py
